# bleepy-profanity-check

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
profanity_check/: __init__.py  profanity_check.py
profanity_check/data/: model.joblib  tagalog_clean_data.csv  tagalog_model.joblib  tagalog_vectorizer.joblib  train_model.py  vectorizer.joblib
tests/: test_profanity_check.py
